--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "name": "number-classification-api",
+
+ { "name": "number-classification-api",
   "version": "1.0.0",
   "main": "index.mjs",
   "scripts": {
